objects/ASI_KOR_SR_Proposal_Header__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_BM_Proposal_Header__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BM CA Proposal</label>
        <referenceTo>ASI_KOR_BM_Proposal_Header__c</referenceTo>
        <relationshipName>ASI_KOR_SR_Proposal_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Approval_Status__c</fullName>
        <formula>text(ASI_KOR_BM_Proposal_Header__r.ASI_KOR_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Code__c</fullName>
        <formula>Owner:User.ASI_KOR_User_Branch_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch__c</fullName>
        <formula>Owner:User.ASI_KOR_User_Branch_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Cut_off_Date__c</fullName>
        <formula>ASI_KOR_BM_Proposal_Header__r.ASI_KOR_Cut_off_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_KOR_SR_Proposal_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Mass_Upload_Message__c</fullName>
        <label>Mass Upload Message</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Month__c</fullName>
        <defaultValue>TEXT(MONTH(Today()))</defaultValue>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Region__c</fullName>
        <formula>Owner:User.ASI_KOR_User_Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Regional_Approval_Status__c</fullName>
        <formula>text(ASI_KOR_BM_Proposal_Header__r.ASI_KOR_RSD_Proposal_Header__r.ASI_KOR_Status__c )</formula>
        <label>Regional Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Manager_Email__c</fullName>
        <label>SYS Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Proposal_Code__c</fullName>
        <formula>Text(ASI_KOR_Year__c) + Text(ASI_KOR_Month__c) + OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Proposal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Proposal_Month_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Proposal Exists for Year-Month</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved by BM</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_CA_Amount_excl_Basic__c</fullName>
        <label>Total CA (excl. Basic)</label>
        <summarizedField>ASI_KOR_SR_Proposal_Detail__c.ASI_KOR_Total_CA_Amount_excl_Basic__c</summarizedField>
        <summaryForeignKey>ASI_KOR_SR_Proposal_Detail__c.ASI_KOR_SR_Proposal_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Incentive_Amount_Proposal__c</fullName>
        <label>Total VI</label>
        <summarizedField>ASI_KOR_SR_Proposal_Detail__c.ASI_KOR_Total_Incentive_Amount_Proposal__c</summarizedField>
        <summaryForeignKey>ASI_KOR_SR_Proposal_Detail__c.ASI_KOR_SR_Proposal_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <defaultValue>TEXT(YEAR(today()))</defaultValue>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                    <default>true</default>
                    <label>2013</label>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Planning (SR)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_Total_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201703_March</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_Total_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>201703 March</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201704_April</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_Total_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>201704 April</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201705_May</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_Total_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>201705 May</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201706_June</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_Total_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>201706 June</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201707_July</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>7</value>
        </filters>
        <label>201707 July</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201708_Aug</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <label>201708 Aug</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201709_Sep</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>9</value>
        </filters>
        <label>201709 Sep</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201710_Oct</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>201710 Oct</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201711_Nov</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>201711 Nov</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201712_Dec</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <label>201712 Dec</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_February</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_Total_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>201702 February</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_January</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_KOR_Total_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201701 January</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201801_Jan</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201801 Jan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201802_Feb</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>201802 Feb</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SRP-{00000000}</displayFormat>
        <label>SR Sales Planning</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plannings (SR)</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_KR_Status_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(ASI_KOR_Status__c), ISPICKVAL(PRIORVALUE(ASI_KOR_Status__c), &quot;Approved by BM&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Approval_Comments__c</errorDisplayField>
        <errorMessage>The status is not allow to change when approved by BM</errorMessage>
    </validationRules>
</CustomObject>